unpackaged/main/default/objects/Account/fields/Conversion_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Billing_Contact__c</fullName>
    <label>Conversion Billing Contact</label>
    <length>75</length>
    <type>Text</type>
</CustomField>