unpackaged/main/default/objects/Account/fields/Conversion_Invoice_Email__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Invoice_Email__c</fullName>
    <label>Conversion Invoice Email</label>
    <length>75</length>
    <type>Text</type>
</CustomField>