unpackaged/main/default/objects/Account/fields/Open_Payables__c.field-meta.xml
<CustomField>
    <fullName>Open_Payables__c</fullName>
    <label>Open Payables</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>