unpackaged/main/default/objects/Account/fields/Payable_Contact__c.field-meta.xml
<CustomField>
    <fullName>Payable_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payable Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Payable Contact)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>