unpackaged/main/default/objects/Account/fields/pro_Default_Ledger__c.field-meta.xml
<CustomField>
    <fullName>pro_Default_Ledger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Isil Kaya - Created by Prodigy.</description>
    <label>Default Ledger</label>
    <referenceTo>AcctSeed__Ledger__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>