unpackaged/main/default/objects/Account/fields/pro_Email__c.field-meta.xml
<CustomField>
    <fullName>pro_Email__c</fullName>
    <description>JP 15/03/2023 V1 - Created by Prodigy
JP 22/05/2023 - Edited label to Remittance Email</description>
    <label>Remittance Email</label>
    <type>Email</type>
</CustomField>