unpackaged/main/default/objects/Account/fields/pro_Exclude_from_Invoice_Emails__c.field-meta.xml
<CustomField>
    <fullName>pro_Exclude_from_Invoice_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>JP 24/07/2023 - Created by Prodigy</description>
    <label>Exclude from Invoice Emails</label>
    <type>Checkbox</type>
</CustomField>