unpackaged/main/default/objects/Account/fields/pro_Invoice_Email__c.field-meta.xml
<CustomField>
    <fullName>pro_Invoice_Email__c</fullName>
    <description>JP 23/05/2023 - Created by Prodigy</description>
    <label>Invoice Email</label>
    <type>Email</type>
</CustomField>