unpackaged/main/default/objects/Account/fields/pro_PO_Approved__c.field-meta.xml
<CustomField>
    <fullName>pro_PO_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Isil Kaya - Created by Prodigy.
Used to prevent creation of records before related field is approved on Company Account Approvals object.</description>
    <label>PO Approved</label>
    <type>Checkbox</type>
</CustomField>