unpackaged/main/default/objects/Account/fields/pro_Purchase_Order_Email__c.field-meta.xml
<CustomField>
    <fullName>pro_Purchase_Order_Email__c</fullName>
    <description>JP 22/05/2023 - Created by Prodigy</description>
    <label>Purchase Order Email</label>
    <type>Email</type>
</CustomField>