unpackaged/main/default/objects/Account/fields/pro_Statement_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>pro_Statement_Email_Address__c</fullName>
    <description>JP 23/05/2023 - Created by Prodigy</description>
    <label>Statement Email Address</label>
    <type>Email</type>
</CustomField>