unpackaged/main/default/objects/Account/fields/pro_Supplier_Email__c.field-meta.xml
<CustomField>
    <fullName>pro_Supplier_Email__c</fullName>
    <label>Supplier Email</label>
    <type>Email</type>
</CustomField>