unpackaged/main/default/objects/Account/fields/pro_Vendor_Email__c.field-meta.xml
<CustomField>
    <fullName>pro_Vendor_Email__c</fullName>
    <label>Vendor Email</label>
    <type>Email</type>
</CustomField>