unpackaged/main/default/objects/Account/fields/Repair_Executive__c.field-meta.xml
<CustomField>
    <fullName>Repair_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repair Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>