unpackaged/main/default/objects/Account/fields/Sage_Email__c.field-meta.xml
<CustomField>
    <fullName>Sage_Email__c</fullName>
    <inlineHelpText>Converted Sage Accounts Email</inlineHelpText>
    <label>Sage Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>