unpackaged/main/default/objects/Account/fields/Tax_Destination_Code_AP__c.field-meta.xml
<CustomField>
    <fullName>Tax_Destination_Code_AP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Destination Code AP</label>
    <referenceTo>inscor__Tax_Destination_Code__c</referenceTo>
    <relationshipLabel>Accounts (Tax Destination Code AP)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>