unpackaged/main/default/objects/Account/fields/User_is_Repair_Exec__c.field-meta.xml
<CustomField>
    <fullName>User_is_Repair_Exec__c</fullName>
    <formula>$User.Id = Repair_Executive__c</formula>
    <label>User is Repair Exec?</label>
    <type>Checkbox</type>
</CustomField>