unpackaged/main/default/objects/Account/fields/Vendor_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Credit_Limit__c</fullName>
    <label>Vendor Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>