unpackaged/main/default/objects/Account/validationRules/pro_State_Required_if_Billing_Country_US.validationRule-meta.xml
<ValidationRule>
    <fullName>pro_State_Required_if_Billing_Country_US</fullName>
    <active>true</active>
    <description>Isil Kaya - Createdby Prodigy.
Update this validation if country and state free text fields are changed to picklists.</description>
    <errorConditionFormula>ISBLANK(BillingState) &amp;&amp; (
  
OR(  BillingCountry = &#39;US&#39; ,
     BillingCountry = &#39;USA&#39; ,
     BillingCountry = &#39;U.S&#39; ,
     BillingCountry = &#39;U.S.&#39; ,
     BillingCountry = &#39;U.S.A&#39; ,
     BillingCountry = &#39;U.S.A.&#39; ,
     BillingCountry = &#39;us&#39; ,
     BillingCountry = &#39;usa&#39; ,
     BillingCountry = &#39;u.s&#39; ,
     BillingCountry = &#39;u.s.&#39; ,
     BillingCountry = &#39;u.s.a&#39; ,
     BillingCountry = &#39;u.s.a.&#39; ,
     BillingCountry = &#39;United States&#39; ,
     BillingCountry = &#39;united states&#39; ,
     BillingCountry = &#39;United States of America&#39; ,
     BillingCountry = &#39;America&#39; 
  
 )
)</errorConditionFormula>
    <errorDisplayField>BillingState</errorDisplayField>
    <errorMessage>Please enter a value for &#39;Billing State&#39;.</errorMessage>
</ValidationRule>