unpackaged/main/default/objects/Account/listViews/Accounts_with_Record_ID.listView-meta.xml
<ListView>
    <fullName>Accounts_with_Record_ID</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>inscor__Business_ID__c</columns>
    <columns>inscor__Conversion_ID__c</columns>
    <columns>inscor__External_Reference_ID__c</columns>
    <columns>AcctSeed__Stripe_Customer_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>Accounts with Record ID</label>
</ListView>